# kaggle-neurips-opp2025

./: .gitignore  CLAUDE.md  README.md  bulletproof_baseline.py  fixed_baseline_simple.py  main.py  optuna_baseline.py  pyproject.toml  quick_test.py  run_baseline.py  run_fast_baseline.py  test_xgb_fix.py  ultrafast_baseline.py  working_baseline.py
.claude/: settings.local.json
models/: training_log_20250630_143035.json
notebooks/: 01_exploration.ipynb  comprehensive_eda.ipynb  rdkit_xgb_baseline.ipynb
src/: baseline_final.py  baseline_model.py  baseline_model_fixed.py  eda_utils.py  hyperparameter_optimization.py  kaggle_utils.py
