[project]
name = "neurips-polymer-prediction"
version = "0.1.0"
description = "NeurIPS Open Polymer Prediction 2025 Competition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    
    # Machine learning
    "scikit-learn==1.5.2",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    
    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Chemistry/molecular libraries
    "rdkit>=2023.3.1",
    "mordred>=1.2.0",
    
    # Utilities
    "scipy==1.13.1",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "openpyxl>=3.1.0",
    
    # Model interpretation
    "shap>=0.42.0",
    
    # Hyperparameter optimization
    "optuna>=3.0.0",
    
    # Kaggle
    "kaggle>=1.5.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
